--- a/services/templates/services/creator_services.html
+++ b/services/templates/services/creator_services.html
@@ -20,7 +20,8 @@
         .glass-effect {
             background: rgba(255, 255, 255, 0.1);
             backdrop-filter: blur(5px);
-            padding: 20px;
+            padding-left: 10px;
+            padding-right:20px;
             border-radius: 15px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
@@ -96,6 +97,7 @@
         .roles-responsibilities-info {
             background: linear-gradient(135deg, #ffffff, #ff0000, #000000);
         }
+        .card-img-top {}
         /* Unique Gradient Styles for Content Creator Page */
 
     </style>
@@ -118,10 +120,16 @@
             <!-- Analytics Support -->
             <div class="col-12 col-md-6 col-lg-4 mb-4">
                 <div class="gradient-background analytics-support-info">
-                    <div class="glass-effect">
+                    <div class="glass-effect card d-flex justify-content-center align-items-center me-3 mb-3">
+                        <div class="m-5 p-5">
+                            <img class="card-img-top w-100" src="{% static 'images/ci1.png' %}" alt="Card image cap">
+                        </div>
+                            <div class="card-body">
                         <h2><i class="fas fa-chart-line icon-style"></i>Analytics and Insights</h2>
                         <p>Gain actionable insights with our in-depth post analysis to refine your content strategy and
                             audience engagement.</p>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -130,9 +138,11 @@
             <div class="col-12 col-md-6 col-lg-4 mb-4">
                 <div class="gradient-background creator-safeguarding-info">
                     <div class="glass-effect">
-                        <h2 class="text-dark"><i class="fas fa-shield-alt icon-style"></i>Commitment and Safeguarding
-                        </h2>
-                        <p>Our commitment ensures you're backed by solid contracts, timely payments, and transparent
+                        <div class="m-5 p-5">
+                        <img class="card-img-top w-100" src="{% static 'images/ci2.png' %}" alt="Commitment and Safeguarding">
+                    </div>
+                        <h2 class="text-dark"><i class="fas fa-shield-alt icon-style"></i>Commitment and Safeguarding</h2>
+                        <p class="mb-3 pb-3">Our commitment ensures you're backed by solid contracts, timely payments, and transparent
                             dealings for your peace of mind.</p>
                     </div>
                 </div>
@@ -142,8 +152,11 @@
             <div class="col-12 col-md-6 col-lg-4 mb-4">
                 <div class="gradient-background freedom-flexibility-info">
                     <div class="glass-effect">
+                                                <div class="m-5 p-5">
+                        <img class="card-img-top w-100" src="{% static 'images/ci3.png' %}" alt="Freedom and Flexibility">
+                    </div>
                         <h2 class="text-danger"><i class="fas fa-hand-paper icon-style"></i>Freedom and Flexibility</h2>
-                        <p>Embrace the freedom to express your creativity on your terms, with the flexibility to engage
+                        <p class="mb-3 pb-3">Embrace the freedom to express your creativity on your terms, with the flexibility to engage
                             with multiple brands and campaigns.</p>
                     </div>
                 </div>
@@ -153,8 +166,11 @@
             <div class="col-12 col-md-6 col-lg-4 mb-4">
                 <div class="gradient-background opportunities-benefits-listing">
                     <div class="glass-effect">
+                                                       <div class="m-5 p-5">
+                        <img class="card-img-top w-100" src="{% static 'images/ci4.png' %}" alt="Freedom and Flexibility">
+                    </div>
                         <h2><i class="fas fa-gift icon-style"></i>Opportunities and Perks</h2>
-                        <p>Enjoy exclusive perks like sponsored travel, product freebies, and premium campaign rates to
+                        <p class="mb-3 pb-3">Enjoy exclusive perks like sponsored travel, product freebies, and premium campaign rates to
                             reward your creative contributions.</p>
                     </div>
                 </div>
@@ -164,9 +180,11 @@
             <div class="col-12 col-md-6 col-lg-4 mb-4">
                 <div class="gradient-background content-creator-advertising">
                     <div class="glass-effect">
-
+                        <div class="m-5 p-5">
+                            <img class="card-img-top w-100" src="{% static 'images/ci5.png' %}" alt="Freedom and Flexibility">
+                        </div>
                         <h2 class="text-dark"><i class="fas fa-bullhorn icon-style"></i>Advertising Opportunities</h2>
-                        <p>Stand out with tailored advertising campaigns that showcase your unique brand across multiple
+                        <p class="mb-3 pb-3">Stand out with tailored advertising campaigns that showcase your unique brand across multiple
                             platforms and audiences.</p>
                     </div>
                 </div>
@@ -187,7 +205,9 @@
                     <div class="col-12 col-md-6 col-lg-4 mb-4">
                         <div class="gradient-background analytics-support-info">
                             <div class="glass-effect">
-                            <img src="path-to-your-placeholder-image" class="card-img-top" alt="Content Crafting">
+                                         <div class="m-5 p-5">
+                            <img class="card-img-top w-100" src="{% static 'images/ci6.png' %}" alt="Freedom and Flexibility">
+                        </div>
                             <div class="card-body">
                                 <h5 class="card-title"><i class="fas fa-pencil-alt icon-cycle"></i>Crafting
                                     Content</h5>
@@ -200,8 +220,11 @@
                     <!-- Card for Community Interaction -->
                     <div class="col-12 col-md-6 col-lg-4 mb-4">
                         <div class="gradient-background analytics-support-info">
-                            <div class="glass-effect">
-                            <img src="path-to-your-placeholder-image" class="card-img-top" alt="Community Interaction">
+                            <div class="glass-effect  card d-flex justify-content-center align-items-center me-3 mb-3">
+                               
+                                <div class="m-5 p-5">
+                                    <img class="card-img-top w-100" src="{% static 'images/ci7.png' %}" alt="Card image cap">
+                                </div>
                             <div class="card-body">
                                 <h5 class="card-title"><i class="fas fa-comments icon-cycle"></i>Community
                                     Interaction</h5>
@@ -214,8 +237,11 @@
                     <!-- Card for Industry Research -->
                     <div class="col-12 col-md-6 col-lg-4 mb-4">
                         <div class="gradient-background analytics-support-info">
-                            <div class="glass-effect">
-                            <img src="path-to-your-placeholder-image" class="card-img-top" alt="Industry Research">
+                            <div class="glass-effect card d-flex justify-content-center align-items-center me-3 mb-3">
+                               
+                                <div class="m-5 p-5">
+                                    <img class="card-img-top w-100" src="{% static 'images/ci9.png' %}" alt="Card image cap">
+                                </div>
                             <div class="card-body">
                                 <h5 class="card-title"><i class="fas fa-search icon-cycle"></i>Industry Research
                                 </h5>
@@ -228,8 +254,11 @@
                     <!-- Card for Brand Collaboration -->
                     <div class="col-12 col-md-6 col-lg-4 mb-4">
                         <div class="gradient-background analytics-support-info">
-                            <div class="glass-effect">
-                            <img src="path-to-your-placeholder-image" class="card-img-top" alt="Brand Collaboration">
+                            <div class="glass-effect card d-flex justify-content-center align-items-center me-3 mb-3">
+                               
+                                <div class="m-5 p-5">
+                                    <img class="card-img-top w-100" src="{% static 'images/ci10.png' %}" alt="Card image cap">
+                                </div>
                             <div class="card-body">
                                 <h5 class="card-title"><i class="fas fa-handshake icon-cycle"></i>Brand
                                     Collaboration</h5>
